--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,7 +80,7 @@
     .midPage {
         background: @lightYellow;
         height: 100vh;
-        border: 1px solid grey;
+        // border: 1px solid grey;
         display:flex;
         align-items: center;
         flex-direction: column;
@@ -96,7 +96,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            
+
         }//closes midTop
 
         .center {
@@ -126,7 +126,9 @@
 
     }//closes the midPage
     
-   
+   .bottomPage {
+       height: 100vh;
+   }
 
    
     
